fix state map padding on narrow screen

--- a/src/app/state-detail/state-detail.component.scss
+++ b/src/app/state-detail/state-detail.component.scss
@@ -72,7 +72,10 @@
   margin: 0 auto;
   .state-reps-section {
     flex: 1;
-    padding-right: 4rem;
+
+    @media (min-width: 768px) {
+      padding-right: 4rem;
+    }
   }
   .rep-info-section {
     flex: 1.5;
